chore(App.css): update padding in .article__container and .comment__container to improve spacing feat(App.css): add styling for .comment__container and .comment__container h4 to align comments to the left and add padding to comment author fix(Article.jsx): rename avatar_url prop to author_avatar_url for better clarity feat(ArticlePage.jsx): fetch and display comments for the article, add Comment component to render each comment feat(Comment.jsx): create Comment component to render individual comments with author, body, date, and vote icons refactor(Homepage.jsx): wrap loader in a section tag for better structure feat(convertDate.js): add formatDate and formatDateAndTime functions to format dates in the app

--- a/src/App.css
+++ b/src/App.css
@@ -71,8 +71,9 @@ nav img {
   align-items: center;
 }
 
-.article__container {
-  padding-right: 0.5rem;
+.article__container,
+.comment__container {
+  padding-right: 1rem;
 }
 
 .article__avatar img {
@@ -129,4 +130,12 @@ nav img {
 .article-page .article__stats {
   justify-content: space-between;
   gap: 0;
+}
+
+.comment__container {
+  text-align: left;
+}
+
+.comment__container h4 {
+  padding-left: 0.5rem;
 }
